assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Cinzel+Decorative&display=swap');

:root {

  --font-primary: 'Roboto Slab', serif;
  --font-secondary: 'Cinzel Decorative';
  --background-color: #1c1c1c;
  --button-color: #8B0000;
  --button-hover: #A40000;
  --highlight-color: #FFD700;
  --text-color: #F5F5F5;
}

body {
  font-family: var(--font-primary);
  background-color: var(--background-color);
  text-align: center;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  min-height: 100vh;

}

/* Headings */
h1,
h2 {
  font-family: var(--font-secondary);
  font-weight: bold;
  color: white;
  font-size: 50px;
  margin-bottom: 20px;
  margin-top: 20px;
}

#instructions {
  display: none;
}

div#instructions {
  color: white;
}

#game {
  display: none;
}

div#scrambled.letters {
  font-size: 2rem;
  font-weight: bold;
  letter-spacing: 4px;
  padding: 10px;
  text-align: center;
  font-family: var(--font-secondary);
  color: var(--text-color);
}


div#word.letters {
  letter-spacing: 10px;
  font-size: 24px;
  font-weight: bold;
  margin-bottom: 20px;
  color: var(--text-color);
}

div#message {
  color: var(--highlight-color);
}

/* Start Button */
button#start {
  background-color: var(--button-color);
  color: white;
  margin: 5px 5px;
  cursor: pointer;
  font-size: 20px;
}

/* Instruction Button */
button#instructions-btn {
  background-color: var(--button-color);
  color: white;
  margin: 10px 5px;
  cursor: pointer;
  font-size: 20px;
}

/* Submit Button */
button#submit {
  color: var(--highlight-color);
  margin: 10px 5px;
  cursor: pointer;
  font-size: 20px;
}

button#restart {
  background-color: var(--button-color);
  color: var(--highlight-color);
  margin: 10px 5px;
  cursor: pointer;
  font-size: 20px;

}

/* Hint Button */
button#hint {
  background-color: var(--button-color);
  color: var(--highlight-color);
  margin: 10px 5px;
  cursor: pointer;
  font-size: 20px;
}

/* buttons */
button {
  background-color: var(--button-color);
  border-radius: 10px;
  transition: 0.3s;
  padding: 15px 24px;
  font-family: var(--font-primary);
}

/* Hover */
button:hover {
  background-color: var(--button-hover);
  font-weight: 600;
  box-shadow: 0 0 12px 4px var(--button-hover);
}

/* Box for answer */
input#guess {
  padding: 16px 30px;
  border-radius: 10px;
  display: block;
  margin: 0 auto;
}

/* timer */
span#timer,
span#score {
  font-size: 20px;
  color: var(--highlight-color);
  font-weight: bold;
}

div#status {
  padding-top: 10px;
  padding-bottom: 10px;
}

.hidden {
  display: none;
}

/* responsiveness for small screen */
@media (min-width: 424px) {

  h1,
  h2 {
    font-size: 24px;
  }

  input#guess {
    width: 90%;
  }

  button {
    width: 90%;
    font-size: 16px;
  }
}

/* tablets  */
@media (min-width: 993px) and (max-width: 992px) {
    h1,
  h2 {
    font-size: 32px;
  }

  input#guess {
    width: 90%;
  }

  button {
    width: 90%;
    font-size: 18px;
  }
}
/* laptops */
@media (min-width: 993px) {
  h1,
  h2 {
    font-size: 50px;
  }

  input#guess {
    width: 400px;
  }

  button {
    width: auto;
    font-size: 20px;
  }
}

